[fix]: text-wrap ->  text-wrap component

--- a/styles/news-list.style.module.css
+++ b/styles/news-list.style.module.css
@@ -25,41 +25,6 @@
   margin: 0 0 4px 0;
 }
 
-.news_wrap .text_wrap .title {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 22px;
-  letter-spacing: -0.5px;
-  color: #000;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  word-wrap: break-word;
-  -webkit-line-clamp: 2;
-  margin: 0 0 4px 0;
-}
-.news_wrap .text_wrap .info .media {
-  display: block;
-    font-size: 13px;
-    font-weight: 300;
-    letter-spacing: -0.5px;
-    color: #838383;
-    position: relative;
-}
-.news_wrap .text_wrap .text {
-  font-size: 14px;
-  line-height: 20px;
-  letter-spacing: -0.5px;
-  font-weight: 400;
-  color: #838383;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  word-wrap: break-word;
-  -webkit-line-clamp: 2;
-}
 .rank > li > a .num_wrap {
   position:relative;
   margin-right: 10px;
